@@ -80,6 +80,9 @@ if(NOT BUILD_GUI)
 endif()
 
 option(HAVE_RULES           "Usage of rules (needs PCRE library and headers)"               OFF)
+if(HAVE_RULES)
+    message(WARNING "The usage of rules has been deprecated and will be removed in a future Cppcheck version. Please use addons instead.")
+endif()
 option(USE_BUNDLED_TINYXML2 "Usage of bundled TinyXML2 library"                             ON)
 if(BUILD_CORE_DLL AND NOT USE_BUNDLED_TINYXML2)
     message(FATAL_ERROR "Cannot use external TinyXML2 library when building lib as DLL")
